# tg_blog_client

./: pyproject.toml  run.py
telegram_bot/: commands.py  tg_client.py  utils.py
